# auto_remaster

./: .devcontainer.json  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  README_EN.md  README_dev.md  clean.sh  clean_docker.sh  computer_vision.md  docker-compose.yml  download_dataset.py  papers.md  prompts.md  requirements.txt  source_install.sh
PyHook/: .gitignore  LICENSE  README.rst  VERSION.txt  build.bat  build_requirements.txt  dump  requirements.txt
PyHook-1.3.0-win_amd64/pipelines/: pipeline_template  test_rgb.py  test_stream_diffusion.py
PyHook/Addon/: PyHookAddon.rc  PyHookAddon.sln  PyHookAddon.vcxproj  data_types.h  imgui_overlay.cpp  imgui_overlay.h  pyhook_main.cpp  resource.h
PyHook/PyHook/: _version.py  dll_utils.py  keys.py  main.py  mem_utils.py  pipeline.py  pipeline_utils.py  pyhook.py  session.py
PyHook/docs/: build_opencv_cuda.bat  index.html
auto_remaster/: README.md  distillation.md  evaluation.py  lbm_repae_gan_reflow.py  lbm_repae_gan_reflow_v2.py  repae_updates.md  run_train.sh  single_gpu.yaml  taesd.md  train_auto_remaster.py  train_auto_remaster_flow_struct_noise.py  train_auto_remaster_lbm.py  train_auto_remaster_lbm_meanflow.py  train_auto_remaster_lbm_train_test_gap.py  train_auto_remaster_lbm_train_test_gap_gan.py  train_auto_remaster_lbm_train_test_gap_struct_noise.py  train_auto_remaster_twinflow.py  train_vae.py  twinflow.py
auto_remaster/configs/: fm_struct_noise_30steps.yaml  lbm.yaml  lbm_meanflow.yaml  lbm_repae_gan_reflow.yaml  lbm_train_test_gap.yaml  lbm_train_test_gap_gan.yaml  lbm_train_test_gap_struct_noise.yaml  sd1.5_ddpm.yaml  twinflow.yaml  vae.yaml
auto_remaster/sandbox/: ai_project_analysis.md  create_dataset.ipynb  dataset_explore.ipynb  flux2_tiny_autoencoder.py  image2image.ipynb  lbm_inference.ipynb  metrics.ipynb  scheduler.ipynb  vae.md  vae_reconstruction_testing.ipynb
comfyui_sandbox/: 4Screens.fx  comfyui_api.ipynb  convert_fp8.py  ffmpeg_utils.ipynb  fix_sam2_node.py  image_utils.ipynb  mix_images.py  mix_images_bg.sh  process_folder_bg.sh  process_folder_bg_upscale.sh  process_folder_bg_upscale_v1.sh  process_folder_upscale_v1.py  process_folder_upscale_v2.py  readme.md  reshade_mesh_edges.fx  reshade_screenshot_recorder.py  run_comfy_bg.sh  videos_concat.txt
comfyui_sandbox/comfyui_configs/: control_net_video.json  nfs_rain_real.json  nfs_video_gen.json  videoStyle_transfer.json
img2img-turbo/: bg_train.sh  eval_pix2pix.sh  inference_pix2pix.ipynb  requirements.txt  train_pix2pix.sh
img2img-turbo/src/: pix2pix_dataset.py  pix2pix_turbo.py  train_pix2pix_turbo.py
img2img_turbo/: .gitignore  bg_train_light.sh  custom_turbo.ipynb  debug_dataset.sh  inference_pix2pix.ipynb  inference_pix2pix_light.ipynb  requirements.txt  run_benchmark.sh  train_light.sh  train_pix2pix.sh
img2img_turbo/src/: benchmark.py  model.py  pix2pix_turbo.py  train_pix2pix_light.py  train_pix2pix_turbo.py
inference_optimization/: README.md  lbm_inference.ipynb  requirements_win.txt  taesd.ipynb  tiny_vae.ipynb
inference_optimization/ArtSpew/: README.md  artspew.py  pure_engine.ipynb
inference_optimization/neuro_screen_capture/: BUILD.md  CMakeLists.txt  README.md  build.ps1  build_log.txt  capture_dxgi.cpp  capture_dxgi.h  cuda_interop.cu  cuda_interop.h  main.cpp  research_1.md  research_2.md  unet_and_vae.ipynb  utils.h
inference_optimization/neuro_screen_capture/end2end_tensorrt/: CMakeLists.txt  ISSUE_SUMMARY.md  build.ps1  build_log_debug.txt  capture_dxgi.cpp  capture_dxgi.h  capture_interface.h  capture_wgc.cpp  capture_wgc.h  compare_unet_tensors.py  config.h  cuda_utils.cu  cuda_utils.h  inspect_recording.py  inspect_tensor.py  main.cpp  pipeline.cpp  pipeline.h  recorder.cpp  recorder.h  utils.h  video_sdk_research_1.md  video_sdk_research_2.md  view_recordings.ipynb  vsr_upscaler.cpp  vsr_upscaler.h  window_helper.cpp  window_helper.h
inference_optimization/onestep_diffusion_cursor/: .gitignore  onestep_diffusion_cursor.py  train_onestep_diffusion_cursor.py
inference_optimization/onnx/: pytorch_onnx.ipynb
inference_optimization/sd_pytorch/: readme.md  sd_deeplearning_ai.ipynb  sd_pytorch.ipynb  unet.ipynb
inference_optimization/stable_fast/: stable_fast.ipynb
showcases/showcase_1/: nfs_ip_control_lora_showcase_1.json  showcase_1.json
showcases/showcase_10/: WorkflowV2-1-nfs(bad).json  basic-supir-upscale.json  flux_control_net_union.json  nfs_Flux_Canny_Lora.json  nfs_Flux_Redux.json  nfs_flux_redux_canny_lora(bad).json  workflow_ultimate_upscale_simple_nfs.json  workflow_ultimate_upscale_simple_nfs_mix.json  workflow_ultimate_upscale_simple_nfs_mix_api.json  workflow_ultimate_upscale_simple_nfs_mix_api_v2.json  workflow_ultimate_upscale_simple_nfs_mix_api_v3.json  workflow_ultimate_upscale_simple_nfs_mix_double.json  workflow_ultimate_upscale_simple_nfs_v2.json
showcases/showcase_11/: Ep49 Wan2 2.1 Vace GGUF Video To Video1.3B.json  merge_images.json  (+11 more)
(+240 files in other folders)
